# theticketbot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black-lint.yml  publish-pypi.yml  publish.yml  pyright-lint.yml  ruff-check.yml  ruff-format.yml
docs/dev/: concept.md
src/theticketbot/: README.md  __init__.py  __main__.py  appdirs.py  bot.py  config.py  config_default.toml  database.py  errors.py  logging.py  migrations.py  theticketbot.pot  translator.py  versions.py  views.py
src/theticketbot/cogs/: README.md  cleanup.py  errors.py  inbox.py  owner.py  select.py
src/theticketbot/cogs/inbox/: __init__.py  cog.py  cog_group.py  cog_listeners.py  constants.py  destination.py  modals.py  ratelimits.py  staff.py  views.py
src/theticketbot/locales/: README.md
src/theticketbot/locales/de/: theticketbot.ftl
src/theticketbot/locales/de/LC_MESSAGES/: theticketbot.po
src/theticketbot/locales/en_US/: theticketbot.ftl
src/theticketbot/locales/en_US/LC_MESSAGES/: theticketbot.po
src/theticketbot/locales/fr/: theticketbot.ftl
src/theticketbot/locales/fr/LC_MESSAGES/: theticketbot.po
src/theticketbot/migrations/: 001-base.sql  002-add-default-ticket-name.sql  003-add-inbox-counter.sql  004-replace-name-placeholder.sql  005-add-inbox-destination.sql  006-add-setting-table.sql  007-index-cascading-columns.sql
