[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "theticketbot"
description = "A ticket discord bot."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "asqlite @ https://github.com/Rapptz/asqlite/archive/fcd8ce0672562e440f99eb4b7a56eba16f6abf4e.tar.gz",
    "discord.py~=2.4",
    "humanize~=4.9",
    "pydantic~=2.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[project.scripts]
theticketbot = "theticketbot.__main__:main"

[project.optional-dependencies]
jishaku = ["jishaku>=2.5.2"]

[tool.setuptools_scm]
