[build-system]
requires = ["uv-build~=0.9.21"]
build-backend = "uv_build"

[project]
name = "theticketbot"
version = "1.0.0"
description = "A simple Discord ticket bot built on private channel threads."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "asqlite~=2.0",
    "discord.py~=2.6",
    "fluent-compiler~=1.1",
    "humanize~=4.15",
    "packaging~=25.0",
    "platformdirs~=4.5",
    "pydantic~=2.12",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
keywords = ["i18n", "discord", "discord.py", "project-fluent", "ticketing-system"]

[project.urls]
Homepage = "https://github.com/thegamecracks/theticketbot"
Issues = "https://github.com/thegamecracks/theticketbot/issues"
Changelog = "https://github.com/thegamecracks/theticketbot/blob/main/CHANGELOG.md"

[project.scripts]
theticketbot = "theticketbot.__main__:main"

[project.optional-dependencies]
jishaku = ["jishaku>=2.6.3"]
